--- a/nav.css
+++ b/nav.css
@@ -8,12 +8,6 @@ body {
   font-size: 17px;
 }
 
-.image{
-  float: left;
-  margin: 30px;
-  width: 350px;
-  height: 350px;
-}
 
 p {
   background-image: url(img/blue.jpg);
@@ -31,4 +25,54 @@ p {
   -webkit-font-smoothing: antialiased;
 }
 
+.content {
+  position: unset;
+  position:fixed;
+   top: 0;
+   background: rgba(0, 0, 0, 0.5);
+   color: #f1f1f1;
+   width: 100%;
+   height: 100%;
+   padding: 20px;
+ }
+ 
+ header {
+   position: relative;
+   background-color: black;
+   height: 50vh;
+   min-height: 25rem;
+   width: 100%;
+   overflow: hidden;
+ }
+ 
+ header video {
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   min-width: 100%;
+   min-height: 100%;
+   width: auto;
+   height: auto;
+   z-index: 0;
+   -ms-transform: translateX(-50%) translateY(-50%);
+   -moz-transform: translateX(-50%) translateY(-50%);
+   -webkit-transform: translateX(-50%) translateY(-50%);
+   transform: translateX(-50%) translateY(-50%);
+ }
+ 
+ header .container {
+   position: absolute;
+   z-index: 2;
+ }
+ 
+ header .overlay {
+   position: absolute;
+   top: 0;
+   left: 0;
+   height: 100%;
+   width: 100%;
+   background-color: black;
+   opacity: 0.5;
+   z-index: 1;
+ }
 
